--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,17 @@ repositories {
     mavenCentral()
 }
 group = 'com.bryansharp'
-version = '1.2.8'
+version = '1.2.9.1'
 uploadArchives {
-    version = version + '-SNAPSHOT'//if you are testing the demo I provide locally, you can uncomment this.
+//    version = version + '-SNAPSHOT'//if you are testing the demo I provide locally, you can uncomment this.
     repositories {
         mavenDeployer {
-            repository(url: uri('./repo'))
-            snapshotRepository(url: uri('./snapshotRepo'))
+            repository(url: uri(RELEASE_REPOSITORY_URL)) {
+                authentication(userName: MAVEN_USERNAME, password: MAVEN_PASSWORD)
+            }
+            snapshotRepository(url: uri(SNAPSHOT_REPOSITORY_URL)) {
+                authentication(userName: MAVEN_USERNAME, password: MAVEN_PASSWORD)
+            }
         }
     }
 }
